2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/os7compat.c:
	  - do not delete messages
	  - handle mi_timer messages correctly

2007-05-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/mi_mpprintf.9.man: documentation update
	* doc/man/man9/mi_timer_cancel.9.man: documentation update
	* doc/man/man9/mi_timer_q_switch.9.man: documentation update
	* doc/man/man9/mi_timer_remain.9.man: documentation update
	* doc/man/man9/mi_timer_valid.9.man: documentation update
	* src/include/sys/os7/bufq.h: made unlocked access to head and tail volatile

	* src/include/sys/mac/stream.h: added new timer functions
	* src/include/sys/mps/stream.h: added new timer functions
	* src/include/sys/sun/stream.h: added new timer functions

	* src/kernel/mpscompat.c:
	  - inline documentation updates
	  - heavy rework of mi_timer functions

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strcompat.spec.in: make GPL version more obvious

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo

2007-03-30  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/register_strdev.9.man: documentation updates
	* doc/man/man9/register_strmod.9.man: documentation updates

	* doc/man/strcompat.refs: added VxWorks documentation reference
	* doc/man/man9/SV_WAIT.9.man: documentation updates
	* doc/man/man9/hpuxcompat.9.man: documentation updates
	* doc/man/man9/irixcompat.9.man: documentation updates
	* doc/man/man9/mpscompat.9.man: documentation updates
	* doc/man/man9/qwait.9.man: documentation updates
	* doc/man/man9/sleep.9.man: documentation updates