@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: mi_timer_move.9.man,v 0.9.2.5 2006/10/06 12:13:05 brian Exp $
+.\" @(#) $Id: mi_timer_move.9.man,v 0.9.2.6 2007/05/18 21:17:57 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/10/06 12:13:05 $ by $Author: brian $
+.\" Last Modified $Date: 2007/05/18 21:17:57 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: mi_timer_move.9.man,v $
+.\" Revision 0.9.2.6  2007/05/18 21:17:57  brian
+.\" - updated manual pages for check target
+.\"
 .\" Revision 0.9.2.5  2006/10/06 12:13:05  brian
 .\" - updated manual pages to pass make check and for release
 .\" - updated release files for release
@@ -128,7 +131,7 @@ DDI.
 .PP
 .BR mi_timer_move ()
 changes the target queue to which the timer message will be put with
-.BR put (9)
+.BR putq (9)
 when the timer expires.
 .BR mi_timer_move ()
 can be called for a running timer or a timer that is any state of running,
