@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: mi_timer_remain.9.man,v 0.9.2.2 2007/05/17 22:50:30 brian Exp $
+.\" @(#) $Id: mi_timer_remain.9.man,v 0.9.2.3 2007/05/18 21:17:57 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2007/05/17 22:50:30 $ by $Author: brian $
+.\" Last Modified $Date: 2007/05/18 21:17:57 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: mi_timer_remain.9.man,v $
+.\" Revision 0.9.2.3  2007/05/18 21:17:57  brian
+.\" - updated manual pages for check target
+.\"
 .\" Revision 0.9.2.2  2007/05/17 22:50:30  brian
 .\" - extensive rework of mi_timer functions
 .\"
@@ -176,7 +179,7 @@ When the timer is set, see
 .BR mi_timer (),
 normal kernel timeout functions are called.  When the timeout occurs, the
 message block associated with the timer is placed on a specified queue with
-.BR put (9)
+.BR putq (9)
 as a
 .BR M_PCSIG (9)
 message type.
