@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.27 2007/05/07 18:21:04 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.28 2007/05/18 21:17:58 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/05/07 18:21:04 $ by $Author: brian $
+@c Last Modified $Date: 2007/05/18 21:17:58 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -94,6 +94,11 @@ This release is primarily a maintenance release.
 Major features since the last public release are as follows:
 
 @itemize -
+@item
+Rework of @manref{mi_timer(9)} based timers with the addition of several new
+helper functions.  Enhancements and minor corrections to some OpenSS7 specific
+compatibility functions.
+
 @item
 Support build on CentOS 5.0 (RHEL5).
 
